--- a/research/index.html
+++ b/research/index.html
@@ -21,27 +21,27 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <h4><b>LAUREN FELL</b></h4>
   </div>
   <div class="w3-bar-block">
-    <a href="#home" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>HOME</a> 
+    <a href="https://lozelise.github.io/Portfolio" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>HOME</a> 
   <div class="w3-dropdown-hover">
     <button class="w3-button"><i class="fa fa-pie-chart fa-fw w3-margin-right"></i>RESEARCH & TEACHING 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-    <a href="#research" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw w3-margin-right"></i>RESEARCH</a> 
-    <a href="#publications" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-file-o fa-fw w3-margin-right"></i>PUBLICATIONS</a> 
-    <a href="#teaching" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-university fa-fw w3-margin-right"></i>TEACHING</a> 
+    <a href="https://lozelise.github.io/Portfolio/research" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw w3-margin-right"></i>RESEARCH</a> 
+    <a href="https://lozelise.github.io/Portfolio/publications" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-file-o fa-fw w3-margin-right"></i>PUBLICATIONS</a> 
+    <a href="https://lozelise.github.io/Portfolio/teaching" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-university fa-fw w3-margin-right"></i>TEACHING</a> 
   </div>
     </div>
-    <a href="#uxconsult" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw w3-margin-right"></i>UX CONSULTING</a> 
-    <a href="#psytassist" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-laptop fa-fw w3-margin-right"></i>PSYTASSIST</a> 
+    <a href="https://lozelise.github.io/Portfolio/uxconsult" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-users fa-fw w3-margin-right"></i>UX CONSULTING</a> 
+    <a href="https://lozelise.github.io/Portfolio/psytassist" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-laptop fa-fw w3-margin-right"></i>PSYTASSIST</a> 
   <div class="w3-dropdown-hover">
     <button class="w3-button"><i class="fa fa-plus fa-fw w3-margin-right"></i>OTHER PROJECTS 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="w3-dropdown-content w3-bar-block w3-card-4">
-    <a href="#design" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paint-brush fa-fw w3-margin-right"></i>DESIGN</a> 
-    <a href="#andy" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-microchip fa-fw w3-margin-right"></i>ANDY</a> 
-    <a href="#volunteering" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-handshake-o fa-fw w3-margin-right"></i>VOLUNTEERING</a> 
+    <a href="https://lozelise.github.io/Portfolio/design" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-paint-brush fa-fw w3-margin-right"></i>DESIGN</a> 
+    <a href="https://lozelise.github.io/Portfolio/andy" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-microchip fa-fw w3-margin-right"></i>ANDY</a> 
+    <a href="https://lozelise.github.io/Portfolio/volunteering" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-handshake-o fa-fw w3-margin-right"></i>VOLUNTEERING</a> 
   </div>
     </div>
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-envelope fa-fw w3-margin-right"></i>CONTACT</a>
