--- a/research/index.html
+++ b/research/index.html
@@ -76,32 +76,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
     <div class="w3-col m6 w3-padding-large">
       <h1 class="w3-center">Publications</h1><br>
-      <p class="w3-large">The cognitive decision space of trust: an exploratory study of image trustworthiness and the propensity to deceive
-L Fell, PD Bruza, SK Devitt, G Oliver, M Gradwell, H Partridge
-        3	2016 </p>
-<p>Design insights into embedding virtual reality content into life skills training for people with intellectual disability
-R Brown, L Sitbon, L Fell, S Koplick, C Beaumont, M Brereton
-  Proceedings of the 28th Australian Conference on Computer-Human Interaction	Citations:2	Year:2016 </p>
-<p>Towards universal search design
-L Sitbon, L Fell, D Poxon, J Zhang, S Geva
-  Proceedings of the 2014 Australasian Document Computing Symposium, 109	Citations:2	Year:2014 </p>
-<p>An Experimental Protocol to Derive and Validate a Quantum Model of Decision-Making
-L Fell, S Dehdashti, P Bruza, C Moreira
-arXiv preprint arXiv:1908.07935	2019 </p>
-<p>Are decisions of image trustworthiness contextual? A pilot study
-PD Bruza, L Fell 2018 </p>
-<p>Modelling Dynamic Interactions between Relevance Dimensions
-S Uprety, S Dehdashti, L Fell, P Bruza, D Song
-arXiv preprint arXiv:1907.10943		2019 </p>
-<p>Towards a Quantum-Like Cognitive Architecture for Decision-Making
-C Moreira, L Fell, S Dehdashti, P Bruza, A Wichert
-arXiv preprint arXiv:1905.05176		2019 </p>
-<p> Do you trust this image? Exploring the subjectivity of image trustworthiness from a cognitive perspective
-PD Bruza, L Fell, SK Devitt, G Oliver, M Gradwell, HL Partridge
-2017</p>
-<p>Immersive digital experiences to ease people with intellectual disability into new physical spaces
-L Sitbon, RA Brown, L Fell, S Koplick, C Beaumont</p>
-      <p class="w3-large w3-text-grey w3-hide-medium">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod temporincididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>Fell, L., Dehdashti, S., Bruza, P., & Moreira, C. (2019). An Experimental Protocol to Derive and Validate a Quantum Model of Decision-Making. arXiv preprint arXiv:1908.07935 <href a="https://arxiv.org/abs/1908.07935">Access here</a></p>
+      <p>Moreira, C., Fell, L., Dehdashti, S., Bruza, P., & Wichert, A. (2019). Towards a Quantum-Like Cognitive Architecture for Decision-Making. arXiv preprint arXiv:1905.05176.<hfref a "https://arxiv.org/abs/1905.05176">Access here</a></p> 
+      <p>Sitbon, L., Fell, L., Poxon, D., Zhang, J., & Geva, S. (2014, November). Towards universal search design. In Proceedings of the 2014 Australasian Document Computing Symposium (p. 109). ACM.<href a"https://eprints.qut.edu.au/79704/">Access here</a></p>
+      <p class="w3-large w3-text-grey w3-hide-medium"><href a "https://lozelise.github.io/Portfolio/publications">More</a></p>
     </div>
   </div>
   
